Kubernetes/Cert-Manager/ACME_Lets_Encrypt/NSX-T_Ingress/kuard-ingress-nsx-t.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kuard
  annotations:
    kubernetes.io/ingress.class: "nsx"    
    certmanager.k8s.io/issuer: "letsencrypt-staging"

spec:
  tls:
  - hosts:
    - aincrad.ddnsgeek.com
    secretName: quickstart-example-tls
  rules:
  - host: aincrad.ddnsgeek.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kuard
          servicePort: 80
